[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/UI/titleBG2test.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/target.png" type="Texture" id=2]
[ext_resource path="res://UI/MainNavigation.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/UI/targetOutline.png" type="Texture" id=4]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=5]
[ext_resource path="res://assets/sprites/player/targetnope.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MainNav" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 321.0 ]
}

[node name="BG" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="TextureRect" type="TextureRect" parent="BG"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Levels" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 543.0
margin_top = 130.0
margin_right = 585.0
margin_bottom = 172.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2

[node name="Label" type="Label" parent="Levels"]
margin_left = -72.0
margin_top = 6.0
margin_bottom = 38.0
text = "Levels"

[node name="Sprite" type="Sprite" parent="Levels"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Levels"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="SpeedRun" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 543.0
margin_top = 174.0
margin_right = 585.0
margin_bottom = 216.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2

[node name="Label" type="Label" parent="SpeedRun"]
modulate = Color( 0.519531, 0.519531, 0.519531, 0.588235 )
self_modulate = Color( 0.568627, 0.568627, 0.568627, 0.568627 )
margin_left = -100.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 38.0
text = "Speedrun"

[node name="Sprite" type="Sprite" parent="SpeedRun"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="SpeedRun"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="How" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 543.0
margin_top = 218.0
margin_right = 585.0
margin_bottom = 260.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2

[node name="Label" type="Label" parent="How"]
modulate = Color( 0.425781, 0.425781, 0.425781, 0.490196 )
self_modulate = Color( 0.568627, 0.568627, 0.568627, 0.568627 )
margin_left = -132.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 38.0
text = "How to play"

[node name="Sprite" type="Sprite" parent="How"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="How"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Settings" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 543.0
margin_top = 262.0
margin_right = 585.0
margin_bottom = 304.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2

[node name="Label" type="Label" parent="Settings"]
modulate = Color( 0.425781, 0.425781, 0.425781, 0.490196 )
self_modulate = Color( 0.486275, 0.486275, 0.486275, 0.572549 )
margin_left = -90.0
margin_top = 6.0
margin_right = 38.0
margin_bottom = 38.0
text = "Settings"

[node name="Sprite" type="Sprite" parent="Settings"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Settings"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Stats" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 543.0
margin_top = 306.0
margin_right = 585.0
margin_bottom = 348.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2

[node name="Label" type="Label" parent="Stats"]
margin_left = -98.0
margin_top = 6.0
margin_right = 30.0
margin_bottom = 38.0
text = "My Stats"

[node name="Sprite" type="Sprite" parent="Stats"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Stats"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="playerName" type="Node2D" parent="."]

[connection signal="mouse_entered" from="Levels" to="." method="_on_Levels_mouse_entered"]
[connection signal="mouse_exited" from="Levels" to="." method="_on_Levels_mouse_exited"]
[connection signal="pressed" from="Levels" to="." method="_on_Levels_pressed"]
[connection signal="mouse_entered" from="SpeedRun" to="." method="_on_SpeedRun_mouse_entered"]
[connection signal="mouse_exited" from="SpeedRun" to="." method="_on_SpeedRun_mouse_exited"]
[connection signal="pressed" from="SpeedRun" to="." method="_on_SpeedRun_pressed"]
[connection signal="mouse_entered" from="How" to="." method="_on_How_mouse_entered"]
[connection signal="mouse_exited" from="How" to="." method="_on_How_mouse_exited"]
[connection signal="pressed" from="How" to="." method="_on_How_pressed"]
[connection signal="mouse_entered" from="Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Stats" to="." method="_on_Stats_mouse_entered"]
[connection signal="mouse_exited" from="Stats" to="." method="_on_Stats_mouse_exited"]
[connection signal="pressed" from="Stats" to="." method="_on_Stats_pressed"]
